# 2048Test

./: .env  .env.dev  .gitignore  docker-compose.yml
fast_api_app/: Dockerfile  env_settings.py  main.py  pyproject.toml
fast_api_app/db_models/: db_funcs.py  models.py
fast_api_app/routes/: score.py  user.py
fast_api_app/rsp_models/: score.py  user.py
vue_app/2048_front/: README.md  package-lock.json  package.json  test.html
vue_app/2048_front/src/: App.vue  main.ts  userFuncs.ts
vue_app/2048_front/src/assets/: 2048styles.css  style.css
vue_app/2048_front/src/components/: GameGrid.vue  UserCard.vue  UserInfo.vue  handlePresses.ts  handleTouches.ts
vue_app/src/: App.vue  main.ts
vue_app/src/assets/: style.css
vue_app/src/components/: GameGrid.vue  UserCard.vue  handlePresses.ts
