[tool.poetry]
name = "2048test"
version = "0.1.0"
description = ""
authors = ["Akxary <pollxx97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
black = "^24.4.2"
mypy = "^1.10.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
